---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: ????
  Bugfixes:
    - Fixed invalid entity when getting button description
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2023-12-07
  Bugfixes:
    - Fixed opening non-filtered entities
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2023-12-07
  Changes:
    - Changed interface to use left/right-click to add and remove filters
    - Added support for logistic storage, requester and buffer chests
    - Add loader1x2 and loader1x1 support
    - Add item suggestions for inserters grabbing from/setting on underground belts, splitters, and loaders
    - Add rocket launch silo suggestions
    - Add fuel / burnt fuel result suggestions
    - Use multiple columns when there are lots of item suggestions
    - Added control tooltips per entity type
    - Support filters on cars and cargo wagons
    - Support existing/all filters on cars and cargo wagons
    - Support increasing/decreasing requests by 5 stacks and full container
  Bugfixes:
    - Fixed crash when selecting a fluid from a signal as a filter by no longer showing non-item signals from the circuit network
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2023-10-03
  Bugfixes:
    - Fixed crash when opening infinity chest
    - Fixed crash when inserter receives a signal with no name
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2023-06-16
  Changes:
    - Fix UI overflow with many suggestions
    - Add circuit networks as suggestion source
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2023-06-15
  Changes: