@@ -3,6 +3,7 @@ Version: 0.1.11
 Date: ????
   Bugfixes:
     - Fixed invalid entity when getting button description
+    - Fixed opening moving cargo wagons and spidertron
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.10
 Date: 2023-12-07
